# ArchilyseAuto

./: .dockerignore  .env  .gitattributes  .gitignore  README.md  ci_requirements.txt  dvc.yaml  makefile  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/: pull_request_template.md
.github/workflows/: build_push_gpu_worker_image.yml  static_analysis.yml  tests.yml
app/: constants.py  main.py  pyproject.toml  requirements.txt  stats.py  utils.py
aurora/: pyproject.toml  requirements.txt
aurora/aurora/: utils.py
aurora/aurora/handlers/coco/: coco_writer.py  instance_generator.py  model.py  sample_generator.py
celery_tasks/: requirements.txt  setup.py
common/: bucket.py  exceptions.py
conf/: config.yaml
conf/dataset/: default.yaml
conf/instance_segmentation/: default.yaml
conf/mlflow/: default.yaml
conf/semantic_segmentation/: local.yaml  remote.yaml
darknet_yolo/: .gitignore  README.md
darknet_yolo/cfg/: yolo-obj.cfg
darknet_yolo/data/: obj.data
data/: .gitignore  blacklist_manual.csv.dvc
data/merged-geometries/: .gitignore
data/results/: .gitignore  metrics.csv  metrics_dvc.json
data/swiss-dwellings-clean/: .gitignore
demo/: .gitignore
detectron/: constants.py  dataset_utils.py  evaluator.py  gcloud_storage.py  hooks.py  outputs.py  trainer.py  training_job.py
docker/: .env  api.Dockerfile  api_base.Dockerfile  darknet_yolo.Dockerfile  detectron2_base.Dockerfile  docker-compose.yml  dvc_detectron.Dockerfile  nginx.Dockerfile  prediction_gpu_worker.Dockerfile  prediction_worker.Dockerfile  prediction_worker_base.Dockerfile  tensorboard.Dockerfile
notebooks/: requirements.txt
predictors/: requirements.txt  setup.py
profiling/: code_to_profile.py
resources/: icons_model_final.pth  icons_model_final_2.pth  spaces_model_final.pth  walls_model_latest.pth  yolo-roi-latest.weights
segmentation/: augmentation.py  dataset.py  model.py  preprocessing.py  requirements.txt  train.py
tests/: conftest.py  mocks_fixtures.py  requirements.txt
(+91 files in other folders)
