[project]
name = "aurora"
version = "1.0.0"
description = "automatic inference of building models from floor plans"
authors = [
    {name="Michael Franzen", email="franzen@archilyse.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
 
[build-system]
requires = ["setuptools ~= 65.5.0", "wheel"]

[tool.flake8]
ignore = ["W503", "E501", "E203", "B019"]
exclude = [".venv", "data", ".git", "__pycache__"]
max-line-length = 88
import-order-style = "pep8"
max-complexity = 15
application-import-names = ["aurora","detectron","predictors"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
use_parentheses = true
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["aurora","detectron","predictors"]
default_section = "THIRDPARTY"
skip=[]

[tool.mypy]
warn_unused_configs = true
files = ["./"]
no_site_packages = true
ignore_missing_imports = true
